# routes/__init__.py
@@ -3,11 +3,13 @@ from .auth_router import auth_bp
 from .cursos_router import cursos_bp
 from .email_router import email_bp
 from .equipos_router import equipos_bp
+from .estudiantes_router import estudiantes_bp
 from .evaluaciones_router import evaluaciones_bp
 from .logs_router import logs_bp
 from .materiales_router import materiales_bp
 from .reportes_router import reportes_bp
 from .usuarios_router import usuarios_bp
+from utils import auth_validator as auth
 
 BLUEPRINTS = (
     ("/auth", auth_bp),
@@ -15,6 +17,7 @@ BLUEPRINTS = (
     ("/cursos", cursos_bp),
     ("/logs", logs_bp),
     ("/usuarios", usuarios_bp),
+    ("/estudiantes", estudiantes_bp),
     ("/evaluaciones", evaluaciones_bp),
     ("/equipos", equipos_bp),
     ("/asistencia", asistencia_bp),
@@ -24,5 +27,6 @@ BLUEPRINTS = (
 
 
 def register_routes(app):
+    app.before_request(auth.validar_token)
     for prefix, bp in BLUEPRINTS:
         app.register_blueprint(bp, url_prefix=prefix)
